--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
+appdirs==1.4.3
 asn1crypto==0.24.0
+atomicwrites==1.2.1
+attrs==18.2.0
+black==18.9b0
 certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
-cryptography==2.3.1
+cryptography==2.4.2
 Flask==1.0.2
-Flask-Cors==3.0.6
+Flask-Cors==3.0.7
+Flask-Jsonpify==1.5.0
 gunicorn==19.9.0
 idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
+MarkupSafe==1.1.0
+more-itertools==4.3.0
 ndg-httpsclient==0.5.1
-pusher==2.0.1
+pluggy==0.8.0
+pusher==2.0.2
+py==1.7.0
 pyasn1==0.4.4
 pycparser==2.19
 pyOpenSSL==18.0.0
-requests==2.20.0
+pytest==4.0.1
+requests==2.20.1
 six==1.11.0
+toml==0.10.0
 urllib3==1.24.1
 Werkzeug==0.14.1
